--- a/src/main/resources/templates/layouts/aside.html
+++ b/src/main/resources/templates/layouts/aside.html
@@ -62,7 +62,7 @@
                                         </p>
                                     </div>
                                     <span style="width: 50px; border-radius: 100%; overflow: hidden; z-index: 99;">
-                                        <img style="aspect-ratio: 1;" src="${group.host.profileImage}" alt="방장 프로필 이미지">
+                                        <img style="aspect-ratio: 1;" src="${group.groupImage}" alt="방장 프로필 이미지" onerror="this.src='/images/noimage.png'">
                                     </span>
                                 </a>
                             `);
@@ -77,7 +77,7 @@
                                         </p>
                                     </div>
                                     <span style="width: 50px; border-radius: 100%; overflow: hidden; z-index: 99;">
-                                        <img style="aspect-ratio: 1;" src="${group.host.profileImage}" alt="방장 프로필 이미지">
+                                        <img style="aspect-ratio: 1;" src="${group.groupImage}" alt="방장 프로필 이미지" onerror="this.src='/images/noimage.png'">
                                     </span>
                                 </a>
                             `);
